--- a/eightqueen.ipynb
+++ b/eightqueen.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "eightqueen.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcTEhham3NGSykyIJP/xgY",
+      "authorship_tag": "ABX9TyMKanHZe+CpBCBhj4ZXVeNf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "crossover = 0.30\n",
         "mutationRate = 0.01"
       ],
-      "execution_count": 37,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "def getPopulation(noOfQueen) :\n",
         "  return [random.sample(range(0,noOfQueen),noOfQueen) for _ in range(populationSize)]"
       ],
-      "execution_count": 38,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "          clashes +=1\n",
         "  return clashes"
       ],
-      "execution_count": 39,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "def getKey(item):\n",
         "  return item[0]"
       ],
-      "execution_count": 40,
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "  noOfChar = math.floor(len(parent1) * crossOverRate)\n",
         "  return parent1[0 : noOfChar] + parent2[noOfChar : len(parent2)]"
       ],
-      "execution_count": 41,
+      "execution_count": 133,
       "outputs": []
     },
     {
@@ -128,15 +128,18 @@
         "def mutate(chromosome, mutationRate):\n",
         "  if(mutationRate > 0.9):\n",
         "    raise Exception(\"Mutation Rate can't be more than 90%\")\n",
-        "  \n",
+        "  print(\"mutationRate: \"+str(mutationRate))\n",
+        "  print(\"mutation input:\"+ str(chromosome))\n",
+        "  print(\"length of chromosome: \"+ str(len(chromosome)))\n",
         "  noOfCharToMutate = math.floor(len(chromosome) * mutationRate)\n",
+        "  print(\"noOfCharTomutate:\"+ str(noOfCharToMutate))\n",
         "  for i in range(noOfCharToMutate):\n",
         "    newNumber = random.randint(0, noOfQueen-1)\n",
         "    chromosome[newNumber] = newNumber\n",
-        "\n",
+        "  print(\"mutateChild:\" + str(chromosome))\n",
         "  return chromosome "
       ],
-      "execution_count": 42,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -155,7 +158,7 @@
         "  def __init__(self, noOfQueen, crossOverRate, mutationRate):\n",
         "    self.noOfQueen = noOfQueen\n",
         "    self.crossOverRate = crossOverRate\n",
-        "    self.mutationrate = mutationRate\n",
+        "    self.mutationRate = mutationRate\n",
         "\n",
         "  def getQueenPlacement(self):\n",
         "    print(\"No of Queen:\"+ str(self.noOfQueen))\n",
@@ -163,21 +166,26 @@
         "    populationWithFitness = []\n",
         "    for chromosome in population:\n",
         "      populationWithFitness.append([getFitness(self.noOfQueen, chromosome), chromosome])\n",
-        "\n",
-        "    while True:\n",
-        "      populationWithFitness = sorted(populationWithFitness, key=getKey, reverse=True)\n",
+        "    generationCount = 1\n",
+        "    while generationCount < 10:\n",
+        "      print('generation: '+ str(generationCount))\n",
+        "      print(populationWithFitness[0])\n",
+        "      populationWithFitness = sorted(populationWithFitness, key=getKey)\n",
         "      if populationWithFitness[0][0] == 0:\n",
         "        break\n",
         "      ## get the first two chromosome and do crossover\n",
+        "      print(\"parent1 :\" + str(populationWithFitness[0][1]))\n",
         "      child = crossOver(populationWithFitness[0][1], populationWithFitness[1][1], self.crossOverRate) \n",
         "      # Mutate Chromosomes.\n",
         "      mutatedChild = mutate(child, self.mutationRate)\n",
+        "      print()\n",
         "      # check if clash score is less than the parents, if yes take the child and the parent with lesser clash score out of the 2\n",
         "      populationWithFitness.append([getFitness(self.noOfQueen, mutatedChild), mutatedChild])\n",
+        "      generationCount+=1\n",
         "\n",
         "    return populationWithFitness[0][1]"
       ],
-      "execution_count": 68,
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -185,56 +193,14 @@
       "metadata": {
         "id": "xwPzISsqlUnj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "b7fcfa56-606a-4fc1-f86f-83d74c9580bd"
+        "colab": {}
       },
       "source": [
-        "eightQueen = EightQueen(8, 0.4, 0.2)\n",
+        "eightQueen = EightQueen(8, 0.4, 0.3)\n",
         "print(eightQueen.getQueenPlacement())"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "No of Queen:8\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pNtC0pJ3vXzP",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "126d8c20-5897-4168-b957-ebd8b6db6208"
-      },
-      "source": [
-        "math.floor(8*0.4)"
-      ],
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 48
-        }
-      ]
+      "outputs": []
     }
   ]
 }
