Working copy of 8 queen

--- a/eightqueen.ipynb
+++ b/eightqueen.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "eightqueen.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKanHZe+CpBCBhj4ZXVeNf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +48,7 @@
         "crossover = 0.30\n",
         "mutationRate = 0.01"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +62,7 @@
         "def getPopulation(noOfQueen) :\n",
         "  return [random.sample(range(0,noOfQueen),noOfQueen) for _ in range(populationSize)]"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +82,7 @@
         "          clashes +=1\n",
         "  return clashes"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +96,7 @@
         "def getKey(item):\n",
         "  return item[0]"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +113,7 @@
         "  noOfChar = math.floor(len(parent1) * crossOverRate)\n",
         "  return parent1[0 : noOfChar] + parent2[noOfChar : len(parent2)]"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +138,7 @@
         "  print(\"mutateChild:\" + str(chromosome))\n",
         "  return chromosome "
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +184,7 @@
         "\n",
         "    return populationWithFitness[0][1]"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,8 +195,10 @@
         "colab": {}
       },
       "source": [
-        "eightQueen = EightQueen(8, 0.4, 0.3)\n",
-        "print(eightQueen.getQueenPlacement())"
+        "if __name__ == \"__main__\" :\n",
+        "  eightQueen = EightQueen(8, 0.4, 0.3)\n",
+        "  rightSequence = eightQueen.getQueenPlacement()\n",
+        "  print(\"Correct Sequence: \"+ str(rightSequence))"
       ],
       "execution_count": null,
       "outputs": []
