--- a/eightqueen.ipynb
+++ b/eightqueen.ipynb
@@ -48,7 +48,7 @@
         "crossover = 0.30\n",
         "mutationRate = 0.01"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "def getPopulation(noOfQueen) :\n",
         "  return [random.sample(range(0,noOfQueen),noOfQueen) for _ in range(populationSize)]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "          clashes +=1\n",
         "  return clashes"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
         "def getKey(item):\n",
         "  return item[0]"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "  noOfChar = math.floor(len(parent1) * crossOverRate)\n",
         "  return parent1[0 : noOfChar] + parent2[noOfChar : len(parent2)]"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -133,12 +133,12 @@
         "  noOfCharToMutate = math.floor(len(chromosome) * mutationRate)\n",
         "  print(\"noOfCharTomutate:\"+ str(noOfCharToMutate))\n",
         "  for i in range(noOfCharToMutate):\n",
-        "    newNumber = random.randint(0, noOfQueen-1)\n",
+        "    newNumber = random.randint(0, len(chromosome)-1)\n",
         "    chromosome[newNumber] = newNumber\n",
         "  print(\"mutateChild:\" + str(chromosome))\n",
         "  return chromosome "
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "    for chromosome in population:\n",
         "      populationWithFitness.append([getFitness(self.noOfQueen, chromosome), chromosome])\n",
         "    generationCount = 1\n",
-        "    while generationCount < 10:\n",
+        "    while True:\n",
         "      print('generation: '+ str(generationCount))\n",
         "      print(populationWithFitness[0])\n",
         "      populationWithFitness = sorted(populationWithFitness, key=getKey)\n",
@@ -174,6 +174,7 @@
         "        break\n",
         "      ## get the first two chromosome and do crossover\n",
         "      print(\"parent1 :\" + str(populationWithFitness[0][1]))\n",
+        "      #randomParent2Index = random.randint(1, 10)\n",
         "      child = crossOver(populationWithFitness[0][1], populationWithFitness[1][1], self.crossOverRate) \n",
         "      # Mutate Chromosomes.\n",
         "      mutatedChild = mutate(child, self.mutationRate)\n",
@@ -184,7 +185,7 @@
         "\n",
         "    return populationWithFitness[0][1]"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -192,7 +193,11 @@
       "metadata": {
         "id": "xwPzISsqlUnj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "9f22315d-dd18-44fc-923a-d6d7fed906a0"
       },
       "source": [
         "if __name__ == \"__main__\" :\n",
@@ -200,8 +205,19 @@
         "  rightSequence = eightQueen.getQueenPlacement()\n",
         "  print(\"Correct Sequence: \"+ str(rightSequence))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "No of Queen:8\n",
+            "generation: 1\n",
+            "[9, [6, 7, 3, 5, 4, 2, 0, 1]]\n",
+            "Correct Sequence: [0, 5, 7, 2, 6, 3, 1, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
