--- a/diabetes_prediction.ipynb
+++ b/diabetes_prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxx+LY4fOBEhceSrIqaPBF",
+      "authorship_tag": "ABX9TyNPK7JKzE8/NMdD9XPcdOHl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,9 +34,10 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "import numpy as np"
       ],
-      "execution_count": 10,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -47,54 +48,62 @@
         "colab": {}
       },
       "source": [
-        "td = pd.read_csv('train.csv')"
+        "x = pd.read_csv('train.csv')"
       ],
-      "execution_count": 12,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CQnWb2KBy57z",
+        "id": "D11FtSd3d65Z",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(td.loc[:, td.columns != 'diabetesMed'], td['diabetesMed'], stratify=td['diabetesMed'], random_state=66)"
+        "df = pd.DataFrame(data={'a': [1,2,3], 'b': [4,5,6]})"
       ],
-      "execution_count": 15,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V1rqNHFhvrgI",
+        "id": "1AFC0Nbhflne",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f60f06f6-230f-460a-a8bb-dd4ab78d113c"
+        "colab": {}
       },
       "source": [
-        "X_train.shape\n",
-        "# td.shape"
+        "df['o']= (df.a == 1).astype('int') "
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(11022, 49)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
-        }
-      ]
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5P5R3vM_f9PV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "prevalence = sum(x.diabetesMed)/len(x.diabetesMed)"
+      ],
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2FEZKO_-mAhr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = x.replace(\"?\", np.nan)"
+      ],
+      "execution_count": 74,
+      "outputs": []
     }
   ]
 }
